Archive2/7d/19f3c0c7f89a0b/output
main.cpp: In instantiation of ‘bool Cmp<T, C>::operator()(U, W) const [with U = float; W = int; T = int; C = std::less<int>]’:
/usr/local/include/c++/4.9.0/bits/stl_tree.h:1139:8:   required from ‘std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_insert_(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Base_ptr, std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Base_ptr, _Arg&&) [with _Arg = std::pair<float, int>; _Key = int; _Val = std::pair<const int, float>; _KeyOfValue = std::_Select1st<std::pair<const int, float> >; _Compare = Cmp<int>; _Alloc = std::allocator<std::pair<const int, float> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator = std::_Rb_tree_iterator<std::pair<const int, float> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Base_ptr = std::_Rb_tree_node_base*]’
/usr/local/include/c++/4.9.0/bits/stl_tree.h:1501:38:   required from ‘std::pair<std::_Rb_tree_iterator<_Val>, bool> std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_insert_unique(_Arg&&) [with _Arg = std::pair<float, int>; _Key = int; _Val = std::pair<const int, float>; _KeyOfValue = std::_Select1st<std::pair<const int, float> >; _Compare = Cmp<int>; _Alloc = std::allocator<std::pair<const int, float> >]’
/usr/local/include/c++/4.9.0/bits/stl_map.h:638:64:   required from ‘std::pair<typename std::_Rb_tree<_Key, std::pair<const _Key, _Tp>, std::_Select1st<std::pair<const _Key, _Tp> >, _Compare, typename __gnu_cxx::__alloc_traits<_Alloc>::rebind<std::pair<const _Key, _Tp> >::other>::iterator, bool> std::map<_Key, _Tp, _Compare, _Alloc>::insert(_Pair&&) [with _Pair = std::pair<float, int>; <template-parameter-2-2> = void; _Key = int; _Tp = float; _Compare = Cmp<int>; _Alloc = std::allocator<std::pair<const int, float> >; typename std::_Rb_tree<_Key, std::pair<const _Key, _Tp>, std::_Select1st<std::pair<const _Key, _Tp> >, _Compare, typename __gnu_cxx::__alloc_traits<_Alloc>::rebind<std::pair<const _Key, _Tp> >::other>::iterator = std::_Rb_tree_iterator<std::pair<const int, float> >]’
main.cpp:24:43:   required from here
main.cpp:13:9: error: static assertion failed: Type mismatch
         static_assert(std::is_same<U, T>::value && std::is_same<W, T>::value, "Type mismatch");        
         ^
